# program-0xRektified

./: .gitignore  PROJECT_DESCRIPTION.md
anchor_project/: ARCHITECTURE.md  Anchor.toml  README.md  package-lock.json  package.json
anchor_project/programs/anchor_project/: Cargo.toml
anchor_project/programs/anchor_project/src/: constants.rs  errors.rs  lib.rs
anchor_project/programs/anchor_project/src/instructions/: claim.rs  commit.rs  initialize.rs  initialize_pool.rs  mint_position.rs  mod.rs  resolve.rs  udpate_resolution.rs  weight.rs
anchor_project/programs/anchor_project/src/state/: commitment.rs  config.rs  epoch_result.rs  mod.rs  pool.rs  position.rs
anchor_project/scripts/: README.md  check-config.ts  check-epoch-result.ts  deploy.sh  faucet-claim.ts  faucet-deploy.sh  faucet-initialize.ts  initialize.ts
anchor_project/tests/: 1-initialize.test.ts  2-mint-position.test.ts  3-commit.test.ts  4-resolve.test.ts  5-claim.test.ts  6-initialize-flow-multi.test.ts  7-multi-wallet-weight.test.ts  8-check-forward-reward-for-no-round-winner.test.ts  9-multiple-position-minting.test.ts  faucet.test.ts  utils.ts
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ClaimRewards.tsx  CommitPosition.tsx  CurrentCommitments.tsx  EpochCountdown.tsx  NetworkSwitcher.tsx  PositionsDisplay.tsx  PreviousWinner.tsx  UserDashboard.tsx  WalletButton.tsx  WalletProvider.tsx
frontend/contexts/: GameStateContext.tsx  NetworkContext.tsx  ProtocolContext.tsx
frontend/deployments/: deployment-devnet.json  (+3 more)
(+26 files in other folders)
